packages/keyring_native/native/bindings.h

/*
This file is automatically generated by build.rs; DO NOT MANUALLY EDIT!
This header is designed to be consumed by ffigen over on the Dart side.
*/

#include <stdint.h>

int32_t keyring_init(void);

int32_t keyring_set_password(const char *service, const char *user, const char *password);

char *keyring_get_password(const char *service, const char *user);

int32_t keyring_set_secret(const char *service,
                           const char *user,
                           const uint8_t *secret,
                           int32_t secret_len);

uint8_t *keyring_get_secret(const char *service, const char *user, int32_t *out_len);

int32_t keyring_delete_credential(const char *service, const char *user);

char *keyring_get_attributes(const char *service, const char *user);

int32_t keyring_update_attributes(const char *service,
                                  const char *user,
                                  const char *attributes_json);

char *keyring_search(const char *spec_json);

int32_t keyring_last_error(void);

char *keyring_last_error_message(void);

void keyring_free_string(char *s);

void keyring_free_secret(uint8_t *s, int32_t len);

char *keyring_store_vendor(void);