packages/keyring_native/lib/src/ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int32 Function()>()
external int keyring_init();

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int keyring_set_password(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
  ffi.Pointer<ffi.Char> password,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> keyring_get_password(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
  )
>()
external int keyring_set_secret(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
  ffi.Pointer<ffi.Uint8> secret,
  int secret_len,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Int32>,
  )
>()
external ffi.Pointer<ffi.Uint8> keyring_get_secret(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
  ffi.Pointer<ffi.Int32> out_len,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external int keyring_delete_credential(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> keyring_get_attributes(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external int keyring_update_attributes(
  ffi.Pointer<ffi.Char> service,
  ffi.Pointer<ffi.Char> user,
  ffi.Pointer<ffi.Char> attributes_json,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> keyring_search(ffi.Pointer<ffi.Char> spec_json);

@ffi.Native<ffi.Int32 Function()>()
external int keyring_last_error();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> keyring_last_error_message();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void keyring_free_string(ffi.Pointer<ffi.Char> s);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Int32)>()
external void keyring_free_secret(ffi.Pointer<ffi.Uint8> s, int len);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> keyring_store_vendor();
